Changed autocomplete option UI from Wordwrap to only display 1 line of each name and address due weird scroll to focus bug. If user uses arrow key to move through options, the option element won't be in focus

--- a/src/app/control-pane/tsp/location-search/location-search.component.css
+++ b/src/app/control-pane/tsp/location-search/location-search.component.css
@@ -4,25 +4,49 @@
   font-size: 12pt;
 }
 
-.mat-option.mat-option {
-  height: unset;
+/* .mat-option.mat-option {
+  height: auto;
 }
 
 .mat-option-text.mat-option-text {
   white-space: normal;
+} */
+
+.mat-autocomplete-panel {
+  /* max-height: 400px !important; */
 }
 
 .search-option-building {
   height: auto;
-  padding-top: 5px;
+  padding-top: 12px;
   line-height: normal;
   font-weight: 500;
   font-size: 10.5pt;
+
+  /* 1 line */
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
 }
 
 .search-option-address {
-  height: 30px;
-  line-height: 30px;
+  height: auto;
+  padding-top: 5px;
+  line-height: normal;
   font-weight: 300;
+  font-size: 9pt;
+
+  /* 1 line */
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+}
+
+option-separator {
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+
+.mat-tooltip {
   font-size: 9pt;
 }
